--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, ul, li, h1, h2, a{
+body, ul, li, h1, h2, a {
     margin: 0;
     padding: 0;
     font-family: arial;
@@ -43,7 +43,7 @@ header{
     padding: 20px;
     position:fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 1; 
     top: 0;
     left: 0;
 }
@@ -249,7 +249,7 @@ h2 p::after{
     .logotext{
         position: relative;
         font-size: 14px;
-        top: 10px;
+        top: 27%;
         left: 0%;
     }  
     
@@ -264,11 +264,11 @@ h2 p::after{
 }
 @media screen and (max-width:370px){
     nav li{
-        font-size:25px;
+        font-size:20px;
         position: relative;
         display: block;
         width: 100;
-        margin:12px 0px;
+        margin:10px 0px;
     }
     
 }
