--- a/style.css
+++ b/style.css
@@ -9,7 +9,54 @@ body, ul, li, h1, h2, a {
   margin: 0;
   padding: 0;
 }
-
+.btn{
+    cursor:crosshair;
+    /* I am using this because i love mobile games */
+    padding: 7px 10px;
+        font-size:20px;
+        border-top-right-radius:10px;
+        border-bottom-left-radius:10px;
+        transition:all 1s;
+        display:inline-block;
+    position: absolute;
+    top: 27px;
+    left: 41%;
+}
+        .btn:after, .btn:before{
+            content:" ";
+            width:10px;
+            height:10px;
+            position:absolute;
+            border :0px solid rgb(0, 0, 0);
+            transition:all 0.7s;
+            }
+        .btn:after{
+            top:-1px;
+            left:-1px;
+            border-top:2px solid black;
+            border-left:2px solid black;
+            border-radius:50px;
+        }
+        .btn:before{
+            bottom:-1px;
+            right:-1px;
+            border-bottom:2px solid black;
+            border-right:2px solid black;
+            border-radius:50px;
+        }
+        .btn:hover{
+            border-top-right-radius:0px;
+        border-bottom-left-radius:0px;
+        /* background: black; */
+        /* color:white; */
+        color:rgb(0, 0, 0);
+        }
+            .btn:hover:before,.btn:hover:after{
+                width:100%;
+                height:100%;
+             /* border-color:rgb(255, 255, 255); */
+             border-color:rgb(0, 0, 0);
+            }
 
 
 .logo{
@@ -57,6 +104,11 @@ header h1 {
     border: 5px solid rgb(109, 106, 106);
     padding: 6px 12px;
     border-radius: 50px;
+}
+  
+     header h1:hover {  
+    transition-duration: 3s;
+    transform: rotate(2turn);
 }
 nav {
     background-color: #F4F4F4;
@@ -113,6 +165,7 @@ article p{
     margin: 0px 0;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
+
 .images1 li{
     display: inline-block;
     width: 65%;
@@ -286,7 +339,7 @@ h2 p::after{
     } 
 }
 @media screen and (max-width:388px){
-    .logotext{
+    .btn{
       
         font-size: 14px;
         top: 27%;
@@ -315,9 +368,9 @@ h2 p::after{
         position: relative;
         display: block;
         width: 100;
-        margin:10px 0px;
+        margin:5px 0px;
+        padding:2px 0px;
     }
-    
 }
 @media screen and (max-width:700px){
     header{
