--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ nav {
     background-color: #F4F4F4;
     
     position: sticky;
+    margin-top: -10px;
     /* top: 100px; */
     top:0;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -165,6 +166,8 @@ nav li a{
 nav li a.join{
     color:rgb(250, 157, 157)
 }
+
+
 main{
     max-width: 100%;
     width: 1200px;
@@ -300,20 +303,44 @@ p::selection{
 h2 p::after{
     content: '...';
 }
+/* .move1{
+    display: flex;
+} */
+
+.move{
+    margin-left: 100px;
+
+}
 
 /* responsive styles */
+
+@media screen and (max-width:1200px){
+    
+    .banner .welcome h2{
+        font-size:20px;
+    }  
+    .move{
+        margin-left: -250px;
+    }
+}
 
 @media screen and (max-width:1025px){
     
     .banner .welcome h2{
         font-size:20px;
     }  
+    .move{
+        margin-left: -150px;
+    }
 }
 @media screen and (max-width:900px){
     
     .banner .welcome h2{
         font-size:16px;
     }  
+    .move{
+        margin-left: -290px;
+    }
     
 }
 @media screen and (max-width:860px){
@@ -347,9 +374,9 @@ h2 p::after{
     .banner .welcome h2{
         font-size:7px;
     } 
-    .banner .welcome{
+    /* .banner .welcome{
         padding: 20px;
-    } 
+    }  */
 }
 @media screen and (max-width:486px){
     
@@ -359,6 +386,28 @@ h2 p::after{
     .banner .welcome{
         padding: 15px;
     } 
+    .btn{
+      
+        font-size: 9px;
+        top: 80px;
+        left: 110px;
+        display:inline-block;
+        position: relative;
+    }  
+    .logo{
+        width: 80px;
+        height: 56.34px;
+        display: block;
+        position: absolute;
+        right: 5px;
+    }
+
+    svg {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        left: 140px;
+    }
 }
 @media screen and (max-width:411px){
     
@@ -381,16 +430,25 @@ h2 p::after{
 @media screen and (max-width:388px){
     .btn{
       
-        font-size: 14px;
-        top: 27%;
-        left: 0%; 
-        display:inline-block;
+        font-size: 9px;
+        top: 70px;
+        left: 90px;
+        /* display:inline-block; */
         position: relative;
     }  
     .logo{
         width: 80px;
         height: 56.34px;
         display: block;
+        position: absolute;
+        right: 5px;
+    }
+
+    svg {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        left: 140px;
     }
     
 }
@@ -413,9 +471,9 @@ h2 p::after{
     }
 }
 @media screen and (max-width:700px){
-    header{
-        /* position: relative; */
-    }
+    /* header{
+        position: relative; 
+    }*/
     nav {
         top: 0px;    
     }
